Changelog
=========

2.0b6 (unreleased)
------------------

-


2.0b5 (2013-02-04)
------------------

- Functional robot framework based tests added.
  [Gomez]

- Remove '!important' from collection.css. NEVER use !important in Plone css.
  [timo]


2.0b4 (2012-11-26)
------------------

- No changes. 2.0b3 was a brown bag release.
  [timo]


2.0b3 (2012-11-26)
------------------

- Check if item isPrincipiaFolderish instead of the hardcoded portal_type
  Folder when searching for images
  [ichimdav]

- Fix thumbnail_view so it works with any portal_atct image types not just
  with Image and News Items
  [ichimdav]

- Fix summary_view so shows thumbnails for contents with the image field,
  see http://dev.plone.org/ticket/13010 [kroman0]

- Fix thumbnail_view so it works when Images or News Items are listed,
  see http://dev.plone.org/ticket/13010 [kroman0]

- Avoid site error on summary view if some scale generation have failed.
  [thomasdesvenain, kroman0]

- Remove plone.directives.form dependency.
  [timo]


2.0b2 (2012-08-31)
------------------

- Item count attribute added to control the number of items in a batch.
  [timo]

- BBB methods added to collection class.
  [timo]

- Remove code to remove the ATContentTypes 'Topic' type since this type is not
  present in Plone 4.2 any longer.
  [timo]


2.0b1 (2012-03-09)
------------------

- Remove archetypes-based Topic content type on install.
  [timo]

- Do not hide sort_on and sort_reversed on the field level, since this will
  break the JS code for sorting in plone.formwidget.querystring. At some
  point we have to refactor the code to make plone.formwidget.querystring use
  z3c.form only for sorting.
  [timo]


2.0a1 (2011-11-13)
------------------

- Initial release of the dexterity-based version.